--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html lang="en" >
-< head>
-    ‹meta charset="UTF-8"›
-    ‹meta name="viewport" content="width=device-width, initial-scale=1.0"›
-<title>Document</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-‹body >
+<body>
     <h1>Hello World</h1>
     <p> Hello World</p>
 </body>
-く/html>
+</html>
