--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p> Hello World</p>
+    <p>Hello World</p>
 </body>
 </html>
